    php.exe). (Michele Locati)
  . Implemented "Convert numeric keys in object/array casts" RFC, fixes
    bugs #53838, #61655, #66173, #70925, #72254, etc. (Andrea)
  . Raised minimum supported Windows versions to Windows 7/Server 2008 R2.
    (Anatol)
  . Fixed bug #73969 (segfault in debug_print_backtrace). (andrewnester)

- BCMath:
  . Fixed bug #46564 (bcmod truncates fractionals). (liborm85)

- Calendar:
  . Fix integer overflows (Joshua Rogers)

- Date:
  . Fixed bug #69587 (DateInterval properties and isset). (jhdxr)

- DOM:
  . Fixed bug #67474 (getElementsByTagNameNS filter on default ns). (aboks)

- EXIF:
  . Added support for vendor specific tags for the following formats:
    Samsung, DJI, Panasonic, Sony, Pentax, Minolta & Sigma/Foveon. (Kalle)
  . Fixed bug #72682 (exif_read_data() fails to read all data for some
    images). (Kalle)
  . Fixed bug #71534 (Type confusion in exif_read_data() leading to heap
    overflow in debug mode). (hlt99 at blinkenshell dot org, Kalle)
  . Fixed bug #68547 (Exif Header component value check error).
    (sjh21a at gmail dot com, Kalle)
  . Fixed bug #66443 (Corrupt EXIF header: maximum directory nesting level
    reached for some cameras). (Kalle)
  . Fixed Redhat bug #1362571 (PHP not returning full results for
    exif_read_data function). (Kalle)

- FPM:
  . Configuration to limit fpm slow log trace callers. (Sannis)
  . Fixed bug #69865 (php-fpm does not close stderr when using syslog). 
    (Mike)

- GD:
  . Implemented imageresolution as getter and setter (Christoph)

- GMP:
  . Fixed bug #70896 (gmp_fact() silently ignores non-integer input). (Sara)

- hash:
  . Fixed bug #73961 (environmental build dependency in hash sha3 source).
    (krakjoe)

- Mbstring:
  . Implemented request #66024 (mb_chr() and mb_ord()). (Masakielastic, Yasuo)
  . Implemented request #65081 (mb_scrub()). (Masakielastic, Yasuo)
  . Implemented request #69086 (enhancement for mb_convert_encoding() that