@@ -4,7 +4,7 @@ Req #60524 (Specify temporary directory)
 sys_temp_dir=C:\Windows
 --SKIPIF--
 <?php
-if( substr(PHP_OS, 0, 3) != "WIN" )
+if(PHP_OS_FAMILY !== "WIN")
   die('skip Run only on Windows');
 ?>
 --FILE--
